# edge-auto-tensorrt-lightnet

./: CMakeLists.txt  package.xml  tensorrt_lightnet.cpp  tensorrt_lightnet.hpp  tensorrt_lightnet_node.cpp  tensorrt_lightnet_node.hpp
include/tensorrt_lightnet/: tensorrt_lightnet_node.hpp
launch/: tensorrt_lightnet.launch.xml
src/: tensorrt_lightnet.cpp  tensorrt_lightnet_node.cpp
